--- a/Libraries/TraderCRM/CreateNewApplication/EnterApplicationDetails/CheckOrderNumberSelected.xaml
+++ b/Libraries/TraderCRM/CreateNewApplication/EnterApplicationDetails/CheckOrderNumberSelected.xaml
@@ -3,11 +3,12 @@
     <x:Property Name="IN_browserCRM" Type="InArgument(ui:Browser)" />
     <x:Property Name="OUT_boolOrderNumberExists" Type="OutArgument(x:Boolean)" />
     <x:Property Name="IN_intTimeOut" Type="InArgument(x:Int32)" />
+    <x:Property Name="IN_strOrderNumber" Type="InArgument(x:String)" />
   </x:Members>
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1794,830</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1240,541</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>CheckOrderNumberSelected_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="21">
@@ -65,7 +66,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:BrowserScope SearchScope="{x:Null}" Selector="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" Browser="[IN_browserCRM]" BrowserType="IE" DisplayName="Attach Browser Trader CRM" sap:VirtualizedContainerService.HintSize="434,344" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="ae91bd53ec76085b073276f74157dac9">
+    <ui:BrowserScope SearchScope="{x:Null}" Selector="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" Browser="[IN_browserCRM]" BrowserType="IE" DisplayName="Attach Browser Trader CRM" sap:VirtualizedContainerService.HintSize="434,344" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="64d17b2520481f02eee5d96b7006f2e4">
       <ui:BrowserScope.Body>
         <ActivityAction x:TypeArguments="x:Object">
           <ActivityAction.Argument>
@@ -79,7 +80,7 @@
             </sap:WorkflowViewStateService.ViewState>
             <ui:UiElementExists DisplayName="Element Exists - Order Number" Exists="[OUT_boolOrderNumberExists]" sap:VirtualizedContainerService.HintSize="334,106" sap2010:WorkflowViewState.IdRef="UiElementExists_1">
               <ui:UiElementExists.Target>
-                <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="76115d5a-ca90-4657-bca1-03b086a8538b" InformativeScreenshot="72d8c6c57c8bd2acbd741cd68aa1a57c" Selector="&lt;webctrl id='*rpa_ordernumberid6-rp*' parentid='*rpa_ordernumberid6-rp*' tag='DIV' idx='5' /&gt;" TimeoutMS="[IN_intTimeOut]">
+                <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="76115d5a-ca90-4657-bca1-03b086a8538b" InformativeScreenshot="72d8c6c57c8bd2acbd741cd68aa1a57c" Selector="&lt;webctrl aaname='*{{IN_strOrderNumber}}' tag='DIV' rowName='*Order Number*' /&gt;" TimeoutMS="[IN_intTimeOut]">
                   <ui:Target.WaitForReady>
                     <InArgument x:TypeArguments="ui:WaitForReady" />
                   </ui:Target.WaitForReady>
